fix: height & missing color

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
 :root {
     /* Colors */
     --clr-blue: #10162F;
+    --clr-blue-light: #2760E5;
     --clr-white: #FFFEFD;
     --clr-green-background: #B1E87A;
     --clr-green-answer: #3EB38C;
